--- a/style.css
+++ b/style.css
@@ -10,18 +10,19 @@ body {
     background-color: antiquewhite;
 }
 
-header, main {
-    margin: auto;
-    background-color: deepskyblue;
-}
-
 header {
     border: 2px black solid;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    background-color: cadetblue;
 }
 
 h1 {
-    margin: 5px;
+    border:2px solid brown;
     text-align: center;
+    align-self:center;
+    font-size: 88px;
 }
 
 h2 {
@@ -29,42 +30,55 @@ h2 {
     text-align: left;
 }
 
-#description {
-    text-align: center;
-}
-
 main {  
     border: 4px dashed green;
+    background-color: lightgreen;
 }
 
 #about {
     display: flex;
+    border: 3px solid orange;
 }
 
 nav {
     border: 2px dashed yellow;
+    margin: 0;
 }
 
 ul {
     display: flex;
-    justify-content: space-around;
-    align-content: center;
+    margin: 0;
+    padding: 0;
 }
 
 li {
     border: 2px solid black;
     height: 25px;
-    width: 30%;
+    width: auto;
+    margin: 2px;
+    padding: 2px;
     text-align: center;
     list-style-type:none;
 }
 
-img {
-    width: 200px;
+header img {
+    width: 100px;
     border-radius: 15px;
     margin: 5px;
 }
 
 p {
     border: orange solid 3px;
+    width: 100%;
+    margin: 5px;
+}
+
+footer {
+    border:4px dashed maroon; 
+    background-color: aquamarine;
+}
+
+.fa-brands {
+    height: 50px;
+    width:auto;
 }
