--- a/style.css
+++ b/style.css
@@ -4,20 +4,39 @@
 
 body {
     font-family: Georgia, 'Times New Roman', Times, serif;
-    border: 5px solid red;
-    width: 1000px;
+    width: 1500px;
+    height: 50%;
     margin: auto;
-    background-color: antiquewhite;
+    background-color: gray;
 }
 
 header {
+    position: sticky;
+    top: 0;
+    max-width: 100%;
+    color: white;
+    background-color: black;
     border: 2px black solid;
     display: flex;
     align-items: center;
-    justify-content: space-around;
-    background-color: cadetblue;
+    justify-content: space-between;
+    margin: 0 10%;
 }
 
+#header-name {
+    max-width: 100%;
+    margin: 0;
+    padding: 0;
+    color: white;
+    background: linear-gradient(90deg, red, orange, yellow, green, blue, purple);
+    background-clip: text;
+    -webkit-background-clip: text;
+}
+
+#header-name:hover {
+    color: transparent;
+    transition: 500ms ease;
+}
 h1 {
     border:2px solid brown;
     text-align: center;
@@ -32,17 +51,36 @@ h2 {
 
 main {  
     border: 4px dashed green;
-    background-color: lightgreen;
+    max-width: 100%;
+    margin: 0 10%;
+    background: url("/images/wesley-tingey-AZtMXheXnWc-unsplash.jpg");
+    background-size: contain;
+    background-repeat:round;
 }
 
 #about {
-    display: flex;
-    border: 3px solid orange;
+    margin: 0 10%;
+    text-align: center;
 }
 
-nav {
-    border: 2px dashed yellow;
-    margin: 0;
+.project-container {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+
+.project-box {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    border: 5px pink solid;
+    height: 250px;
+    width: 175px;
+    margin: 5%;
+    background-color: white;
+    background-size: contain;
+    background-repeat: no-repeat;
 }
 
 ul {
@@ -52,7 +90,6 @@ ul {
 }
 
 li {
-    border: 2px solid black;
     height: 25px;
     width: auto;
     margin: 2px;
@@ -61,24 +98,27 @@ li {
     list-style-type:none;
 }
 
-header img {
+img {
     width: 100px;
     border-radius: 15px;
     margin: 5px;
 }
 
 p {
-    border: orange solid 3px;
-    width: 100%;
-    margin: 5px;
+    color: white;
 }
 
 footer {
-    border:4px dashed maroon; 
-    background-color: aquamarine;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    color: white;
+    background-color: black;
+    border:4px dashed maroon;
+    max-width: 100%;
+    margin: 0 10%;
 }
 
 .fa-brands {
-    height: 50px;
-    width:auto;
-}
+    color: white;
+}   
