minor change to about section

--- a/style.css
+++ b/style.css
@@ -69,12 +69,13 @@ main {
 }
 
 #about {
-    border: 3px white dashed;
     display: flex;
     margin: 0 10%;
     text-align: center;
     align-items: center;
     justify-content: center;
+    background-color: #CA4848;
+    border-radius: 15px;
 }
 
 .project-container {
@@ -93,8 +94,7 @@ main {
     width: 175px;
     margin: 5%;
     background-color: white;
-    background-size: contain;
-    background-repeat: no-repeat;
+    border-radius: 5px;
 }
 
 ul {
